finish for view

--- a/forexglobal/about-us/careers.html
+++ b/forexglobal/about-us/careers.html
@@ -56,7 +56,7 @@
                 <li><a href="stp-broker.html">STP Broker</a></li>
                 <li><a href="legal-documents.html">Legal Documents</a></li>
                 <li><a href="kids.html">KIDs</a></li>
-                <li><a>Careers</a></li>
+                <li><a class="nav__active">Careers</a></li>
               </ul>
             </div>
           </li>
