--- a/forexglobal/about-us/kids.html
+++ b/forexglobal/about-us/kids.html
@@ -55,7 +55,7 @@
                 <li><a href="security-of-funds.html">Security of Funds</a></li>
                 <li><a href="stp-broker.html">STP Broker</a></li>
                 <li><a href="legal-documents.html">Legal Documents</a></li>
-                <li><a>KIDs</a></li>
+                <li><a class="nav__active">KIDs</a></li>
                 <li><a href="careers.html">Careers</a></li>
               </ul>
             </div>
