--- a/forexglobal/about-us/stp-broker.html
+++ b/forexglobal/about-us/stp-broker.html
@@ -53,7 +53,7 @@
               <ul class="nav__sub">
                 <li><a href="licenses-and-regulations.html">Licenses and Regulations</a></li>
                 <li><a href="security-of-funds.html">Security of Funds</a></li>
-                <li><a>STP Broker</a></li>
+                <li><a class="nav__active">STP Broker</a></li>
                 <li><a href="legal-documents.html">Legal Documents</a></li>
                 <li><a href="kids.html">KIDs</a></li>
                 <li><a href="careers.html">Careers</a></li>
