--- a/forexglobal/contact-us.html
+++ b/forexglobal/contact-us.html
@@ -88,7 +88,7 @@
             <a class="nav__link" onclick="contact()">Contact Us</a>
             <div class="nav__wrapper  nav__wrapper--closed">
               <ul class="nav__sub">
-                <li><a>Contact Us</a></li>
+                <li><a class="nav__active">Contact Us</a></li>
                 <li><a href="faq.html">FAQ</a></li>
               </ul>
             </div>
