--- a/forexglobal/faq.html
+++ b/forexglobal/faq.html
@@ -89,7 +89,7 @@
             <div class="nav__wrapper  nav__wrapper--closed">
               <ul class="nav__sub">
                 <li><a href="contact-us">Contact Us</a></li>
-                <li><a>FAQ</a></li>
+                <li><a class="nav__active">FAQ</a></li>
               </ul>
             </div>
           </li>
