--- a/forexglobal/resources/economic-calendar.html
+++ b/forexglobal/resources/economic-calendar.html
@@ -79,7 +79,7 @@
             <div class="nav__wrapper  nav__wrapper--closed">
               <ul class="nav__sub">
                 <li><a href="glossary.html">Glossary</a></li>
-                <li><a>Economic calendar</a></li>
+                <li><a class="nav__active">Economic calendar</a></li>
               </ul>
             </div>
           </li>
