--- a/forexglobal/resources/glossary.html
+++ b/forexglobal/resources/glossary.html
@@ -78,7 +78,7 @@
             <a class="nav__link" onclick="resources()">Resources</a>
             <div class="nav__wrapper  nav__wrapper--closed">
               <ul class="nav__sub">
-                <li><a>Glossary</a></li>
+                <li><a class="nav__active">Glossary</a></li>
                 <li><a href="economic-calendar.html">Economic calendar</a></li>
               </ul>
             </div>
