--- a/forexglobal/trading/account-comparison.html
+++ b/forexglobal/trading/account-comparison.html
@@ -65,7 +65,7 @@
             <div class="nav__wrapper  nav__wrapper--closed">
               <ul class="nav__sub">
                 <li><a href="account-types.html">Account Types</a></li>
-                <li><a>Account Comparison</a></li>
+                <li><a class="nav__active">Account Comparison</a></li>
                 <li><a href="product-specification.html">Product Specification</a></li>
                 <li><a href="trading-specification.html">Trading Specification</a></li>
                 <li><a href="platforms.html">Platforms</a></li>
