--- a/forexglobal/trading/account-types.html
+++ b/forexglobal/trading/account-types.html
@@ -64,7 +64,7 @@
             <a class="nav__link" onclick="trading()">Trading</a>
             <div class="nav__wrapper  nav__wrapper--closed">
               <ul class="nav__sub">
-                <li><a href="account-types.html">Account Types</a></li>
+                <li><a class="nav__active">Account Types</a></li>
                 <li><a href="account-comparison.html">Account Comparison</a></li>
                 <li><a href="product-specification.html">Product Specification</a></li>
                 <li><a href="trading-specification.html">Trading Specification</a></li>
