--- a/forexglobal/trading/funding-and-withdrawal.html
+++ b/forexglobal/trading/funding-and-withdrawal.html
@@ -69,7 +69,7 @@
                 <li><a href="product-specification.html">Product Specification</a></li>
                 <li><a href="trading-specification.html">Trading Specification</a></li>
                 <li><a href="platforms.html">Platforms</a></li>
-                <li><a>Funding and Withdrawal</a></li>
+                <li><a class="nav__active">Funding and Withdrawal</a></li>
                 <li><a href="announcements.html">Announcements</a></li>
               </ul>
             </div>
