--- a/forexglobal/trading/platforms/zulutrade.html
+++ b/forexglobal/trading/platforms/zulutrade.html
@@ -102,7 +102,7 @@
   </header>
   <section class="zulu">
     <div class="zulu__wrapper">
-      <video class="zulu__video" src="../../img/video/What-is-ZuluTrade.mp4" poster="../../img/zulutrade-poster.jpg"></video>
+      <video class="zulu__video" src="../../img/video/What-is-ZuluTrade.mp4" poster="../../img/zulutrade-poster.jpg" preload="auto"></video>
       <button class="zulu__control" type="button"></button>
     </div>
     <div class="container">
