--- a/forexglobal/about-us/legal-documents.html
+++ b/forexglobal/about-us/legal-documents.html
@@ -54,7 +54,7 @@
                 <li><a href="licenses-and-regulations.html">Licenses and Regulations</a></li>
                 <li><a href="security-of-funds.html">Security of Funds</a></li>
                 <li><a href="stp-broker.html">STP Broker</a></li>
-                <li><a>Legal Documents</a></li>
+                <li><a class="nav__active">Legal Documents</a></li>
                 <li><a href="kids.html">KIDs</a></li>
                 <li><a href="careers.html">Careers</a></li>
               </ul>
