--- a/forexglobal/about-us/licenses-and-regulations.html
+++ b/forexglobal/about-us/licenses-and-regulations.html
@@ -51,7 +51,7 @@
             <a class="nav__link" onclick="about()">About</a>
             <div class="nav__wrapper  nav__wrapper--closed">
               <ul class="nav__sub">
-                <li><a>Licenses and Regulations</a></li>
+                <li><a class="nav__active">Licenses and Regulations</a></li>
                 <li><a href="security-of-funds.html">Security of Funds</a></li>
                 <li><a href="stp-broker.html">STP Broker</a></li>
                 <li><a href="legal-documents.html">Legal Documents</a></li>
