--- a/forexglobal/about-us/security-of-funds.html
+++ b/forexglobal/about-us/security-of-funds.html
@@ -52,7 +52,7 @@
             <div class="nav__wrapper  nav__wrapper--closed">
               <ul class="nav__sub">
                 <li><a href="licenses-and-regulations.html">Licenses and Regulations</a></li>
-                <li><a>Security of Funds</a></li>
+                <li><a class="nav__active">Security of Funds</a></li>
                 <li><a href="stp-broker.html">STP Broker</a></li>
                 <li><a href="legal-documents.html">Legal Documents</a></li>
                 <li><a href="kids.html">KIDs</a></li>
