--- a/forexglobal/trading/announcements.html
+++ b/forexglobal/trading/announcements.html
@@ -70,7 +70,7 @@
                 <li><a href="trading-specification.html">Trading Specification</a></li>
                 <li><a href="platforms.html">Platforms</a></li>
                 <li><a href="funding-and-withdrawal.html">Funding and Withdrawal</a></li>
-                <li><a>Announcements</a></li>
+                <li><a class="nav__active">Announcements</a></li>
               </ul>
             </div>
           </li>
