--- a/forexglobal/trading/platforms.html
+++ b/forexglobal/trading/platforms.html
@@ -166,7 +166,7 @@
       <div class="footer__flex">
         <ul class="footer__ul">
           <li>
-            <img class="footer__logo" src="../../img/logo-w.svg" alt="Forex24 Global">
+            <img class="footer__logo" src="../img/logo-w.svg" alt="Forex24 Global">
           </li>
           <li>
             <a class="footer__callme" href="tel:+442080891644">Call us</a>
@@ -181,12 +181,12 @@
         <ul class="footer__ul  footer__ul--links">
           <li><b>About</b></li>
           <li><hr></li>
-          <li><a href="../../about-us/licenses-and-regulations.html">Licenses & Regulations</a></li>
-          <li><a href="../../about-us/security-of-funds.html">Security Of Funds</a></li>
-          <li><a href="../../about-us/stp-broker.html">STP Broker</a></li>
-          <li><a href="../../about-us/legal-documents.html">Legal Documents</a></li>
-          <li><a href="../../about-us/kids.html">KIDs</a></li>
-          <li><a href="../../about-us/careers.html">Careers</a></li>
+          <li><a href="../about-us/licenses-and-regulations.html">Licenses & Regulations</a></li>
+          <li><a href="../about-us/security-of-funds.html">Security Of Funds</a></li>
+          <li><a href="../about-us/stp-broker.html">STP Broker</a></li>
+          <li><a href="../about-us/legal-documents.html">Legal Documents</a></li>
+          <li><a href="../about-us/kids.html">KIDs</a></li>
+          <li><a href="../about-us/careers.html">Careers</a></li>
         </ul>
         <ul class="footer__ul  footer__ul--links">
           <li><b>Trading</b></li>
@@ -202,8 +202,8 @@
         <ul class="footer__ul  footer__ul--links">
           <li><b>Resources</b></li>
           <li><hr></li>
-          <li><a href="../../resources/glossary.html">Glossary</a></li>
-          <li><a href="../../resources/economic-calendar.html">Economic calendar</a></li>
+          <li><a href="../resources/glossary.html">Glossary</a></li>
+          <li><a href="../resources/economic-calendar.html">Economic calendar</a></li>
         </ul>
         <ul class="footer__ul  footer__ul--links">
           <li><b>Contacts</b></li>
