--- a/forexglobal/trading/platforms/zulutrade.html
+++ b/forexglobal/trading/platforms/zulutrade.html
@@ -103,30 +103,32 @@
   <section class="zulu">
     <div class="zulu__wrapper">
       <video class="zulu__video" src="../../img/video/What-is-ZuluTrade.mp4" poster="../../img/zulutrade-poster.jpg" preload="auto"></video>
-      <button class="zulu__control" type="button"></button>
+      <button class="zulu__play" type="button"></button>
+      <div class="zulu__controls">
+        <button class="zulu__pause"></button>
+        <button class="zulu__full"></button>
+        <button class="zulu__muted  zulu__muted--inactive"></button>
+      </div>
     </div>
     <div class="container">
       <div class="inner  inner--zulu">
-        <h1 class="inner__name">ZuluTrade Social Trading Platform</h1>
-        <p class="inner__text">ZuluTrade is an online trading platform that enables users to locate or subscribe to top performing traders.</p>
+        <h1 class="inner__name  inner__name--zulu">ZuluTrade</h1>
+        <p class="inner__sub">ZuluTrade is an online trading platform that enables users to locate or subscribe to top performing traders.</p>
         <p class="inner__text">A trader can execute trades manually or allocate a desirable amount to follow top performing traders, therefore diversifying the investment. The trader can also set risk management parameters in advance of any trading activity, in order to shield against any volatile trading strategy.</p>
         <p class="inner__text">ZuluTrade users are able to connect to the platform through the website and the available mobile applications. Innovative Mobile Apps for all major mobile platforms (iPhone, iPad, Android, Blackberry, and Kindle Fire) offer full functionality and the ability to be in control of your account anywhere, anytime.</p>
         <a class="zulu__start" href="#">Start Trading</a>
         <hr>
-        <div class="zulu__flex">
+        <div class="zulu__flex  zulu__flex--key">
           <div class="zulu__mockup"></div>
           <ul class="zulu__list">
             <li><b>Key features included:</b></li>
-            <li>Works with any browser</li>
-            <li>No downloads, Flash  or Java required</li>
-            <li>You will keep your MT4 login and password</li>
-            <li>Trade directly from the chart</li>
-            <li>Multi-language support</li>
-            <li>View aggregated positions</li>
-            <li>Advanced "Close All" functionality</li>
-            <li>Real-time quotes and execution</li>
-            <li>Fully synchronized with MT4</li>
-            <li>Dynamic order routing</li>
+            <li><strong>ZuluGuard:</strong> advanced risk management feature for capital protection</li>
+            <li><strong>ZuluRank:</strong> a state of the art algorithm that ranks signal providers with full transparency</li>
+            <li><strong>Margin-Call-o-Meter:</strong> estimates how much risk the user is taking with the selected Signal Provider portfolio and settings</li>
+            <li><strong>Simulation:</strong> a powerful tool to simulate the account’s potential performance before going live on real account with a selected strategy, therefore testing various scenarios for minimizing risk</li>
+            <li><strong>Automator:</strong> users can create and execute their own automated rules using ‘if this, then that’ logic, with their own custom settings</li>
+            <li><strong>Mobile App:</strong> innovative mobile apps help you to stay in control of your account wherever you are</li>
+            <li><strong>Customisation Settings:</strong> fully customisable account management suite: set specific instruments, set custom stops and limits, edit or close positions instantly, configure lot sizes and more!</li>
           </ul>
         </div>
         <hr>
