--- a/forexglobal/trading/platforms/zulutrade.html
+++ b/forexglobal/trading/platforms/zulutrade.html
@@ -105,7 +105,7 @@
       <video class="zulu__video" src="../../img/video/What-is-ZuluTrade.mp4" poster="../../img/zulutrade-poster.jpg" preload="auto"></video>
       <button class="zulu__play" type="button"></button>
       <div class="zulu__controls">
-        <button class="zulu__pause"></button>
+        <button class="zulu__pause  zulu__pause--inactive"></button>
         <button class="zulu__full"></button>
         <button class="zulu__muted  zulu__muted--inactive"></button>
       </div>
@@ -113,7 +113,7 @@
     <div class="container">
       <div class="inner  inner--zulu">
         <h1 class="inner__name  inner__name--zulu">ZuluTrade</h1>
-        <p class="inner__sub">ZuluTrade is an online trading platform that enables users to locate or subscribe to top performing traders.</p>
+        <p class="inner__sub">ZuluTrade is an online trading platform that enables users to locate or subscribe to top performing traders</p>
         <p class="inner__text">A trader can execute trades manually or allocate a desirable amount to follow top performing traders, therefore diversifying the investment. The trader can also set risk management parameters in advance of any trading activity, in order to shield against any volatile trading strategy.</p>
         <p class="inner__text">ZuluTrade users are able to connect to the platform through the website and the available mobile applications. Innovative Mobile Apps for all major mobile platforms (iPhone, iPad, Android, Blackberry, and Kindle Fire) offer full functionality and the ability to be in control of your account anywhere, anytime.</p>
         <a class="zulu__start" href="#">Start Trading</a>
