--- a/forexglobal/trading/platforms.html
+++ b/forexglobal/trading/platforms.html
@@ -223,6 +223,6 @@
       <p class="footer__text">The Company is also registered with: FCA in UK with reg. no. 782501; BaFin in Germany with reg. no. 1349943; CONSOB in Italy with reg. no. 4624; ACP in France with reg. no. 75980; CNMV in Spain with reg. no. 4373.</p>
     </div>
   </footer>
-  <script src="../../js/main.min.js" async></script>
+  <script src="../js/main.min.js" async></script>
 </body>
 </html>
