--- a/forexglobal/trading/platforms/zulutrade.html
+++ b/forexglobal/trading/platforms/zulutrade.html
@@ -121,7 +121,7 @@
         <div class="zulu__flex  zulu__flex--key">
           <div class="zulu__mockup"></div>
           <ul class="zulu__list">
-            <li><b>Key features included:</b></li>
+            <li><h2 class="zulu__name">Key features included:</h2></li>
             <li><strong>ZuluGuard:</strong> advanced risk management feature for capital protection</li>
             <li><strong>ZuluRank:</strong> a state of the art algorithm that ranks signal providers with full transparency</li>
             <li><strong>Margin-Call-o-Meter:</strong> estimates how much risk the user is taking with the selected Signal Provider portfolio and settings</li>
