--- a/prizma/index.html
+++ b/prizma/index.html
@@ -32,7 +32,23 @@
           </li>
         </ul>
       </div>
+      <nav class="nav">
+        <ul class="nav__list">
+          <li>
+            <a class="nav__item" href="#">Accounts</a>
+            <ul class="nav__sublist">
+              <li><a class="nav__subitem" href="#">Trade with us</a></li>
+              <li><a class="nav__subitem" href="#">Account types</a></li>
+              <li><a class="nav__subitem" href="#">Segregated accounts</a></li>
+              <li><a class="nav__subitem" href="#">Open live account</a></li>
+            </ul>
+          </li>
+          <li><a class="nav__item" href="#">Platforms</a></li>
+          <li><a class="nav__item" href="#">Tools</a></li>
+        </ul>
+      </nav>
     </div>
   </header>
+  <script src="js/main.js"></script>
 </body>
 </html>
