--- a/prizma/index.html
+++ b/prizma/index.html
@@ -6,6 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>PrizmaFX</title>
   <link rel="stylesheet" href="css/style.min.css">
+  <!-- Slick -->
+  <link rel="stylesheet" href="js/slick/slick.css"/>
+  <link rel="stylesheet" href="js/slick/slick-theme.css"/>
 </head>
 <body>
   <header class="header">
@@ -35,7 +38,7 @@
       <nav class="nav">
         <ul class="nav__list">
           <li>
-            <a class="nav__item" href="#">Accounts</a>
+            <a class="nav__item  nav__item--inactive" href="#">Accounts</a>
             <ul class="nav__sublist">
               <li><a class="nav__subitem" href="#">Trade with us</a></li>
               <li><a class="nav__subitem" href="#">Account types</a></li>
@@ -49,6 +52,31 @@
       </nav>
     </div>
   </header>
-  <script src="js/main.js"></script>
+  <section class="slider">
+    <div class="slider__box  slider__box--1">
+      <div class="slider__container">
+        <div class="slider__flex">
+          <div class="slider__text">
+            <b>Innovative power tools that align with your goals</b>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet tenetur qui sapiente quos, expedita quas ad eius ex consequatur aperiam!</p>
+          </div>
+          <div class="slider__social">
+            <ul>
+              <li><a class="slider__item  slider__item--fb" href="#"></a></li>
+              <li><a class="slider__item  slider__item--in" href="#"></a></li>
+              <li><a class="slider__item  slider__item--gp" href="#"></a></li>
+              <li><a class="slider__item  slider__item--tw" href="#"></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      
+    </div>
+    <div class="slider__box"></div>
+    <div class="slider__box"></div>
+  </section>
+  <script src="js/jquery.min.js"></script>
+  <script src="js/slick/slick.min.js"></script>
+  <script src="js/main.min.js"></script>
 </body>
 </html>
