--- a/prizma/index.html
+++ b/prizma/index.html
@@ -70,10 +70,36 @@
           </div>
         </div>
       </div>
-      
     </div>
     <div class="slider__box"></div>
     <div class="slider__box"></div>
+  </section>
+  <section class="step">
+    <div class="container">
+      <h1 class="step__name">Begin your trading experience with PrizmaFX in 4 easy steps</h1>
+      <div class="step__flex">
+        <div class="step__box">
+          <b>Sign up</b>
+          <hr>
+          <p>Create your Live Trading Account on PrizmaFX</p>
+        </div>
+        <div class="step__box">
+          <b>Verification</b>
+          <hr>
+          <p>Upload Necessary Documents to Verify your Account</p>
+        </div>
+        <div class="step__box">
+          <b>Deposit</b>
+          <hr>
+          <p>Login to your Account and Make a Deposit</p>
+        </div>
+        <div class="step__box">
+          <b>Start Trading</b>
+          <hr>
+          <p>Trade and Choose from Numerous Instruments Available on PrizmaFX</p>
+        </div>
+      </div>
+    </div>
   </section>
   <script src="js/jquery.min.js"></script>
   <script src="js/slick/slick.min.js"></script>
