--- a/prizma/index.html
+++ b/prizma/index.html
@@ -78,26 +78,114 @@
     <div class="container">
       <h1 class="step__name">Begin your trading experience with PrizmaFX in 4 easy steps</h1>
       <div class="step__flex">
-        <div class="step__box">
+        <div class="step__box  step__box--1">
           <b>Sign up</b>
           <hr>
           <p>Create your Live Trading Account on PrizmaFX</p>
         </div>
-        <div class="step__box">
+        <div class="step__box  step__box--2">
           <b>Verification</b>
           <hr>
           <p>Upload Necessary Documents to Verify your Account</p>
         </div>
-        <div class="step__box">
+        <div class="step__box  step__box--3">
           <b>Deposit</b>
           <hr>
           <p>Login to your Account and Make a Deposit</p>
         </div>
-        <div class="step__box">
+        <div class="step__box  step__box--4">
           <b>Start Trading</b>
           <hr>
           <p>Trade and Choose from Numerous Instruments Available on PrizmaFX</p>
         </div>
+      </div>
+    </div>
+  </section>
+  <section class="banner">
+    <div class="container">
+      <div class="banner__flex">
+        <div class="banner__text">
+          <h1 class="banner__name">Forex Trading Platform</h1>
+          <p class="banner__sub">Whether you trade CFDs on forex or one of our other asset classes,<br>you are well catered for by our industry-leading platforms.</p>
+          <ul class="banner__list">
+            <li>Trade 6 asset classes</li>
+            <li>Fixed and floating spreads</li>
+            <li>Instant and Market execution</li>
+            <li>All Expert Advisors supported</li>
+          </ul>
+          <a class="button  button--blue  banner__button" href="#">Try our platform</a>
+          <div class="banner__platform">
+            <a class="banner__android" href="#"></a>
+            <a class="banner__ios" href="#"></a>
+            <a class="banner__desktop" href="#"></a>
+          </div>
+        </div>
+        <div class="banner__mockup"></div>
+      </div>
+    </div>
+  </section>
+  <section class="edge">
+    <div class="container">
+      <div class="edge__flex">
+        <div class="edge__box">
+          <p>2015</p>
+          <b>The Best Forex Brand</b>
+          <small>Investors Chronicle</small>
+        </div>
+        <div class="edge__box">
+          <p>2015</p>
+          <b>The Best Forex Brand</b>
+          <small>Investors Chronicle</small>
+        </div>
+        <div class="edge__box">
+          <p>2015</p>
+          <b>The Best Forex Brand</b>
+          <small>Investors Chronicle</small>
+        </div>
+        <div class="edge__box">
+          <p>2015</p>
+          <b>The Best Forex Brand</b>
+          <small>Investors Chronicle</small>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="info">
+    <div class="container">
+      <h1 class="info__name">A trader oriented broker</h1>
+      <hr class="info__hr">
+      <p class="info__text">PrizmaFX is a top online forex broker with many years of experience in the market. PrizmaFX being a client-oriented company, places the needs of every one of our customers as its own priority. We are committed to providing all our investors a wide range of options when trading to help them become better at trading and also make profits.</p>
+      <p class="info__text">At PrizmaFX, we ensure all our clients are up to date with the market trends and also provide them with latest trading technology and forex tools by investing continuously in innovations. These instruments are updated on a regular basis thereby offering new platforms and services to answer the various questions and meet the need of every trader, in so doing, we are keeping our promise and commitment towards a fair and open trading.</p>
+      <p class="info__text">Every of our trusted customers also has a 24/7 access to our various comprehensive educational materials. These materials help traders understand and learn more about the various online forex operations, trading and the global market in general. We have a great customer support team which is always and readily available to assist with any problem you might encounter or challenge you might face in the course of trading.</p>
+      <p class="info__text">At PrizmaFX we place high importance and emphasis on customer satisfaction, and we are dedicated to being more than just a forex broker to our clients. Make your trading experience worth it, choose a right broker, choose PrizmaFX!</p>
+    </div>
+  </section>
+  <section class="multyplatform">
+    <div class="container">
+      <div class="multyplatform__flex">
+        <div class="multyplatform__mockup"></div>
+        <div class="multyplatform__text">
+          <h1 class="multyplatform__name">Multyplatform trading</h1>
+          <p class="multyplatform__sub">Your goals are unique, so your investment guidance should be too. This is why at MultiplyMarket we take the time to listen and understand what matters most to you before helping you develop and manage your investment strategy. The MT4 is a renowned application which gives you the opportunity to trade Forex, Commodities, and Futures. It is very suitable for those new to trading and also to experienced ones, as the technology is well advanced and easy to use.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="ready">
+    <div class="container">
+      <h1 class="ready__name">Ready to expirience PrizmaFX</h1>
+      <p class="ready__text">Joining is quick and easy. It takes less than 5 minutes to be able to finally pay and<br>receive payments anytime, anywhere and to any account!</p>
+      <a class="button  button--white  ready__start" href="#">Open account</a>
+    </div>    
+  </section>
+  <section class="payment">
+    <div class="container">
+      <div class="payment__flex">
+        <div class="payment__box  payment__box--visa"></div>
+        <div class="payment__box  payment__box--mc"></div>
+        <div class="payment__box  payment__box--bank"></div>
+        <div class="payment__box  payment__box--neteller"></div>
+        <div class="payment__box  payment__box--skrill"></div>
       </div>
     </div>
   </section>
