--- a/prizma/index.html
+++ b/prizma/index.html
@@ -178,6 +178,9 @@
       <a class="button  button--white  ready__start" href="#">Open account</a>
     </div>    
   </section>
+  <section class="map">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2850.046784852555!2d26.060633215664318!3d44.4116856791027!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40b1ff852661a00d%3A0xd9ccdbc1855fe327!2zU2NhcmEgQSwgQmxvYyBNMTEwLCBTdHJhZGEgQsOicm5vdmEgOCwgQnVjdXJlyJl0aSAwNTIwMzQsINCg0YPQvNGL0L3QuNGP!5e0!3m2!1sru!2sua!4v1525246579998" width="100%" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>  
+  </section>
   <section class="payment">
     <div class="container">
       <div class="payment__flex">
@@ -189,6 +192,45 @@
       </div>
     </div>
   </section>
+  <footer class="footer">
+    <div class="container">
+      <img class="footer__logo" src="img/footer-logo.svg" alt="PrizmaFX">
+        <ul class="footer__links">
+          <li><a href="#">Licenses</a></li>
+          <li>|</li>
+          <li><a href="#">Account Types</a></li>
+          <li>|</li>
+          <li><a href="#">Funding & Withdrawal</a></li>
+          <li>|</li>
+          <li><a href="#">Product Specification</a></li>
+          <li>|</li>
+          <li><a href="#">Economic Calendar</a></li>
+          <li>|</li>
+          <li><a href="#">Legal Documents</a></li>
+          <li>|</li>
+          <li><a href="#">Partners</a></li>
+          <li>|</li>
+          <li><a href="#">Faq</a></li>
+        </ul>
+    </div>
+    <hr class="footer__hr">
+    <div class="container">
+      <b class="footer__name">Risk Warning:</b>
+      <p class="footer__text">Trading in Forex and CFDs can carry a high level of risk and can result in the loss of part or all of your investment, so it may not be appropriate for all investors. You should be aware of all the risks associated with Forex and CFD trading and seek for independent advice. Past performance does not constitute a reliable indicator of future results. Forecasts for the future do not constitute a reliable indicator of future performance. Copyright for the pages and for the screens displaying the pages, and for the information and material therein and in their arrangement, is owned by © 2017.VACENTY FINANCE LIMITED All Rights Reserved, Registered in Marshall Islands Trust Company Complex, Ajelatake Road, Ajelatake Island, Majuro. Marshall Islands, MH96960 (henceforth: “MultiplyMarket”) unless otherwise indicated.</p>
+    </div>
+    <hr class="footer__hr">
+    <div class="container">
+      <div class="footer__flex">
+        <p class="footer__copyright">© 2018 ALL right reserved PrizmaFX</p>
+        <ul class="footer__social">
+          <li><a class="footer__item  footer__item--fb" href="#"></a></li>
+          <li><a class="footer__item  footer__item--gp" href="#"></a></li>
+          <li><a class="footer__item  footer__item--in" href="#"></a></li>
+          <li><a class="footer__item  footer__item--tw" href="#"></a></li>
+        </ul>
+      </div>
+    </div>
+  </footer>
   <script src="js/jquery.min.js"></script>
   <script src="js/slick/slick.min.js"></script>
   <script src="js/main.min.js"></script>
