--- a/forexglobal/register/real/step-1.html
+++ b/forexglobal/register/real/step-1.html
@@ -373,6 +373,10 @@
           <button class="register__next" type="button" name="Next Step">Next Step</button>
         </div>
       </form>
+      <p class="register__warning">
+        <b>Risk Warning:</b>
+        Our products are traded on margin and carry a high level of risk and it is possible to lose all your capital. These products may not be suitable for everyone and you should ensure that you understand the risks involved.
+      </p>
     </div>
   </section>
   <section class="payment  payment--inner">
