--- a/forexglobal/trading/platforms/desktop.html
+++ b/forexglobal/trading/platforms/desktop.html
@@ -31,12 +31,12 @@
           <li>
             <a class="header__open" href="#">Open account</a>
             <ul class="header__accounts  header__accounts--closed">
-              <li><a href="#">Live</a></li>
-              <li><a href="#">Demo</a></li>
-              <li><a href="#">ZuluTrade</a></li>
+              <li><a href="../../register/real/step-1.html">Real</a></li>
+              <li><a href="../../register/demo.html">Demo</a></li>
+              <li><a href="../../trading/platforms/zulutrade.html">ZuluTrade</a></li>
             </ul>
           </li>
-          <li><a href="#">Log in</a></li>
+          <li><a href="https://client.forex24.com/en/members/login">Log in</a></li>
           <li>
             <select class="header__language">
               <option>En</option>
